Add users and CSRF tokens

--- a/base/static/css/style.css
+++ b/base/static/css/style.css
@@ -344,6 +344,8 @@ div.github-fork-text {
 
 #footer-row {
     font-size: 13px;
+    margin-bottom:20px;
+    text-align: center;
 }
 
 .profile-comment-div {
