--- a/base/templates/register.html
+++ b/base/templates/register.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div class="row">
-  <div class="col-lg-6" style="float: none; margin: 20px auto;">
+  <div class="col-lg-6 col-md-6 col-sm-6" style="float: none; margin: 20px auto;">
   {% from "macros.html" import render_field %}
   <form method="POST" action="." class="form form-horizontal">
     {{ form.csrf_token }}
